--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "uuid": "^8.3.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^25.2.6",
     "nodemon": "^2.0.2",
+    "prettier": "^2.2.1",
     "supertest": "^4.0.2"
   }
 }
